# smart-contract-scalability

./: .gitignore  .gitmodules  Makefile.am  TODO  configure.ac  dedup.sh  disable_hyperthreading.sh  rocksdb_install.md
ansible/: aws_install_packages.yaml
block_assembly/: assembly_worker.cc  assembly_worker.h  limits.cc  limits.h
builtin_fns/: asset.cc  builtin_fns.cc  builtin_fns.h  contract.cc  crypto.cc  delete.cc  env.cc  gas_costs.h  general_storage.cc  hashset.cc  int64.cc  logging.cc  raw_memory.cc  rpc.cc  runtime.cc  witness.cc
common/: syscall_nos.h
config/: print_configs.cc  print_configs.h  static_constants.h
contract_db/: contract_db.cc  contract_db.h  contract_db_proxy.cc  contract_db_proxy.h  contract_persistence.cc  contract_persistence.h  contract_utils.cc  contract_utils.h  runnable_script.h  types.h  uncommitted_contracts.cc  uncommitted_contracts.h  verified_script.h
contracts/: .gitignore  Cargo.toml  Makefile
cpp_contracts/: 0x.cc  0x.wasm  SnapshotStatus_README.md  atomic_swap.cc  atomic_swap.wasm  cfmm.cc  cfmm.wasm  compound.cc  compound.h  compound.wasm  erc20.cc  erc20.h  erc20.wasm  erc721.cc  erc721.h  erc721.wasm  payment_channel.cc  payment_channel.wasm  public_auction.cc  public_auction.wasm  rfq.cc  rfq.wasm  sisyphus_erc20.cc  sisyphus_erc20.h  sisyphus_erc20.wasm  test_gas_limit.cc  test_gas_limit.wasm  test_hashset.cc  test_hashset.wasm  test_hashset_manipulation.cc  test_hashset_manipulation.wasm  test_log.cc  test_log.wasm  test_nn_int64.cc  test_nn_int64.wasm  test_raw_memory.cc  test_raw_memory.wasm  test_redirect_call.cc  test_redirect_call.wasm  test_rpc.cc  (+5 more)
crypto/: crypto_utils.cc  crypto_utils.h  hash.h  lthash.h
debug/: debug_macros.h  debug_utils.cc  debug_utils.h
experiments/: payment_experiment.cc  payment_experiment.h
filter/: apply_context.cc  apply_context.h  filter_context.cc  filter_context.h
groundhog/: types.h
hash_set/: atomic_set.cc  atomic_set.h  utils.h
lfi_contracts/: .gitignore  Knitfile  Makefile  deployer.c  empty.S  erc20.c  erc20.h  hello  hello.c  ld.ld  payment.c  syscall.S  test_calldata.c  test_gas_limit.c  test_invoke.c  test_log.c  test_redirect_call.c  utils.h
lficpp/: lficpp.cc  lficpp.h  signal_handler.cc  signal_handler.h
main/: basic.cc  blockstm_comparison.cc  filter_perf.cc  groundhog_payment_sim.cc  simple.cc  sisyphus_payment_sim.cc  sisyphus_proof_size_exp.cc
mempool/: mempool.cc  mempool.h
metering/: Cargo.toml
metering_ffi/: metered_contract.cc  metered_contract.h
mutator/: batch_filter.cc  batch_filter.h  filter_context.h
mutator_old/: batch_filter.cc  filter_context.cc
notes/: arch-proposal.md  replay-mechanisms.txt  spec.md  use-cases.txt
object/: comparators.cc  comparators.h  delta_applicator.cc  delta_applicator.h  delta_type_class.cc  delta_type_class.h  make_delta.cc  make_delta.h  mod_notes.md  object_defaults.cc  object_defaults.h  object_modification_context.cc  object_modification_context.h  object_mutator.cc  object_mutator.h  revertable_object.cc  revertable_object.h
object_old/: comparators.cc  object_modification_context.cc
pedersen/: Cargo.toml
pedersen_ffi/: pedersen.cc  pedersen.h
persistence/: accumulate_kvs_iface.h  async_rdb_bulkload.h  persist_xdr.h  rocksdb_iface.h  rocksdb_wrapper.cc  rocksdb_wrapper.h
phase/: phases.cc  phases.h
proto/: external_call.proto
rpc/: rpc_address_db.cc  rpc_address_db.h
rpc_server/: echo_server.h  mock_external_call.h  server_runner.cc  server_runner.h
rust/: Cargo.toml
rust/scs_callable_attr/src/: lib.rs
rust/scs_sdk/: Cargo.toml
rust/scs_sdk/src/: builtin_fns.rs  lib.rs  rt.rs  types.rs
rust/test_log/: Cargo.toml
rust/test_log/src/: lib.rs
rust_sdk/: Cargo.toml
sisyphus_vm/: vm.cc  vm.h
state_db/: async_keys_to_disk.h  block_state_delta_batch.h  delta_batch.cc  delta_batch.h  delta_batch_value.cc  delta_batch_value.h  delta_vec.cc  delta_vec.h  deterministic_state_db.cc  deterministic_state_db.h  groundhog_persistent_state_db.cc  groundhog_persistent_state_db.h  modification_metadata.h  modified_keys_list.cc  modified_keys_list.h  new_key_cache.cc  new_key_cache.h  object_defaults.cc  object_defaults.h  object_modification_context.cc  object_mutator.cc  object_mutator.h  optional_value_wrapper.h  prioritized_tc.cc  prioritized_tc.h  serial_delta_batch.cc  serial_delta_batch.h  sisyphus_state_db.cc  sisyphus_state_db.h  state_db.cc  state_db.h  state_db_v2.cc  state_db_v2.h  transaction_state_delta_batch.h  typed_mod_trie.cc  typed_mod_trie.h  typed_modification_index.cc  typed_modification_index.h
storage_proxy/: proxy_applicator.cc  proxy_applicator.h  storage_proxy.cc  storage_proxy.h  storage_proxy_value.h  transaction_rewind.h
test_utils/: deploy_and_commit_contractdb.cc  deploy_and_commit_contractdb.h  load_wasm.h  make_calldata.h  utils.h
tests/: builtin_fns_invoke_tests.cc  builtin_fns_log_tests.cc  gas_tests.cc  hashset_tests.cc  invoke_tests.cc  sdk_tests.cc  storage_tests.cc  test_rpc.cc
threadlocal/: allocator.h  cancellable_rpc.cc  cancellable_rpc.h  gc.h  rate_limiter.cc  rate_limiter.h  threadlocal_context.cc  threadlocal_context.h  timeout.cc  timeout.h  uid.h
transaction_context/: .gitignore  error.h  execution_context.cc  execution_context.h  global_context.cc  global_context.h  method_invocation.cc  method_invocation.h  sandbox_cache.h  storage_cache.cc  storage_cache.h  syscall_enum.h  threadlocal_context.cc  threadlocal_context.h  threadlocal_types.h  transaction_context.cc  transaction_context.h  transaction_results.cc  transaction_results.h
tx_block/: tx_block.cc  tx_block.h  tx_set.cc  tx_set.h  unique_tx_set.cc  unique_tx_set.h
utils/: atomic_singleton.h  atomic_uint128.h  defer.h  load_wasm.h  make_calldata.h  recycling_allocator.h  save_load_xdr.h
vm/: base_vm.cc  base_vm.h  genesis.cc  genesis.h  groundhog_vm.cc  groundhog_vm.h  validate_reduce.h  vm.cc  vm.h
wasi/: .gitignore  SETUP.md  linux_install.sh  mac_install.sh  wasi_install.sh
wasm_api/: wasm3.h  wasm_api.cc  wasm_api.h
wasm_api_backup/: wasm_api.cc
(+91 files in other folders)
