[package]
name = "test_log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scs_sdk = {path = "../scs_sdk"}
scs_callable_attr = {path = "../scs_callable_attr"}

[lib]
crate-type = ["cdylib", "rlib"]
